# hackathon24

src/: CMakeLists.txt
src/include/: grid.hpp  level.hpp  matrices.hpp  smoothers.hpp  vcycle.hpp  vector.hpp
src/lib/: matrices.cpp  smoothers.cpp
tests/: CMakeLists.txt  matvec_compare_t.cpp  matvec_prim_t.cpp  matvec_simple_t.cpp  matvec_unstruct_data_map_t.cpp  smoothers_gpu_t.cpp  vecnorm2_t.cpp
