cmake_minimum_required(VERSION 3.27.6)

project(poisson)
set(CMAKE_INSTALL_PREFIX /datasets/teams/hackathon-testing/twhyte/2DPoisson)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
find_package(OpenMP)
if (OPENMP_FOUND)
	set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Ofast -fopenmp --offload-arch=gfx90a")
	set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Ofast -fopenmp --offload-arch=gfx90a")
	set (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} --offload-arch=gfx90a ${OpenMP_EXE_LINKER_FLAGS}")
endif()
add_library(${PROJECT_NAME} lib/matrices.cpp)
install(TARGETS ${PROJECT_NAME} DESTINATION lib)
