cmake_minimum_required(VERSION 3.27.6)

project(smoothers_gpu_t)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
find_package(OpenMP)
if (OPENMP_FOUND)
        set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Ofast -fopenmp --offload-arch=gfx90a")
        set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Ofast -fopenmp --offload-arch=gfx90a")
        set (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} --offload-arch=gfx90a ${OpenMP_EXE_LINKER_FLAGS}")
endif()
add_executable(${PROJECT_NAME} smoothers_gpu_t.cpp)
target_link_directories(${PROJECT_NAME} PRIVATE ${CMAKE_SOURCE_DIR}/../lib/)
target_link_libraries(${PROJECT_NAME} poisson)
